# Plant-Sensor

./: README.md
V1/Hardware/Plantensensor ver 2.1/: 20240719 BOM.xlsx  BOM_order_information.xlsx  Plantensensor2d1 footprint association.txt  Plantensensor2d1.kicad_pcb  Plantensensor2d1.kicad_prl  Plantensensor2d1.kicad_pro  Plantensensor2d1.kicad_sch  STM32&Sensors.kicad_sch  SX1280.kicad_sch  _autosave-Plantensensor2d1.kicad_pcb  fp-B849.tmp  panel.kicad_pro  ~Plantensensor2d1.kicad_sch.lck  ~_autosave-Plantensensor2d1.kicad_pcb.lck
V1/Hardware/Plantensensor ver 2.1 - Copy/: Plantensensor2d1.csv  Plantensensor2d1.kicad_prl  Plantensensor2d1.kicad_pro  Plantensensor2d1.kicad_sch  STM32&Sensors.kicad_sch  STM32&Sensors.kicad_sch-bak  SX1280.kicad_sch  SX1280.kicad_sch-bak  _autosave-Plantensensor2d1.kicad_pcb  fp-info-cache  panel.kicad_pro
V1/Hardware/Plantensensor ver 2.1 - Copy/Gerber/: Plantensensor2d1-bottom.pos  Plantensensor2d1-top.pos
V1/Software/Plant_movement_sensor/: .cproject  .mxproject  .project  Plant_movement_sensor.ioc  STM32WBA52CGUX_RAM.ld
V1/Software/Plant_movement_sensor/App/: app_MadgwickAHRS.c  app_MadgwickAHRS.h  app_MahonyAHRS.c  app_MahonyAHRS.h  app_adc.c  app_adc.h  app_gateway.c  app_gateway.h  app_gnss.c  app_gnss.h  app_hal_pps.c  app_hal_pps.h  app_hal_sync.c  app_hal_sync.h  app_imu.c  app_imu.h  app_init.c  app_init.h  app_led.c  app_led.h  app_lorawan_aes.c  app_lorawan_aes.h  app_lorawan_cmac.c  app_lorawan_cmac.h  app_lorawan_crypto.c  app_lorawan_crypto.h  app_lorawan_defs.h  app_lorawan_utilities.c  app_lorawan_utilities.h  app_network_connect.c  app_network_connect.h  app_node_gnsspps.c  app_node_gnsspps.h  app_radio_available.c  app_radio_available.h  app_rtc.c  app_rtc.h  app_rtc_sync.c  app_rtc_sync.h  app_supercap.c  (+3 more)
V1/Software/Plant_movement_sensor/Core/Inc/: FreeRTOSConfig.h  ICM20948.h  idd_io_hal.h  main.h  stm32wbaxx_hal_conf.h  stm32wbaxx_it.h
V1/Software/Plant_movement_sensor/Core/Src/: adc.c  app_freertos.c  gpio.c  i2c.c  idd_io_hal.c  iwdg.c  lptim.c  main.c  spi.c  stm32wbaxx_hal_msp.c  stm32wbaxx_it.c  tim.c  usart.c
V1/Software/Plant_movement_sensor/Debug/: Plant_movement_sensor.elf  Plant_movement_sensor.list  Plant_movement_sensor.map  makefile  objects.list
V1/Software/Plant_movement_sensor/Debug/App/: app_MadgwickAHRS.cyclo  app_MadgwickAHRS.d  app_MadgwickAHRS.su  app_MahonyAHRS.d  app_adc.cyclo  app_adc.su  app_gateway.cyclo  app_gateway.d  app_gateway.su  app_gnss.d  app_hal_pps.cyclo  app_hal_pps.d  app_hal_pps.su  app_hal_sync.cyclo  app_hal_sync.d  app_hal_sync.su  app_imu.cyclo  app_imu.d  app_imu.su  app_init.cyclo  app_init.d  app_init.su  app_led.cyclo  app_led.d  app_led.su  app_lorawan_aes.cyclo  app_lorawan_aes.d  app_lorawan_aes.su  app_lorawan_cmac.cyclo  app_lorawan_cmac.su  app_lorawan_crypto.cyclo  app_lorawan_crypto.d  app_lorawan_crypto.su  app_lorawan_utilities.cyclo  app_lorawan_utilities.su  app_network_connect.cyclo  app_network_connect.d  app_network_connect.su  app_node_gnsspps.cyclo  app_node_gnsspps.su  (+11 more)
V1/Software/Plant_movement_sensor/Drivers/PCF2131/: PCF2131.c  PCF2131.h
V1/Software/Plant_movement_sensor/Drivers/SX1280/: SX1280.c  SX1280.h
V1/Software/Plant_movement_sensor/Middlewares/nanoprintf/: nanoprintf.h
V1/Software/Plant_movement_sensor/Release/: Plant_movement_sensor.elf  Plant_movement_sensor.list  Plant_movement_sensor.map  sources.mk
V1/Software/Plant_movement_sensor/Release/App/: app_MadgwickAHRS.cyclo  app_MadgwickAHRS.su  app_adc.cyclo  app_adc.d  app_adc.su  app_gateway.cyclo  app_gateway.su  app_gnss.cyclo  app_gnss.d  app_gnss.su  app_hal_pps.cyclo  app_hal_pps.su  app_imu.su  (+35 more)
V2/: V2.ioc
V2/Hardware/plant_sensor_v2/: #auto_saved_files#  fp-info-cache  fp-lib-table  plant_sensor_v2.kicad_pcb  plant_sensor_v2.kicad_prl  plant_sensor_v2.kicad_pro  plant_sensor_v2.kicad_sch  plant_sensor_v2.kicad_sch-bak  sym-lib-table
V2/Hardware/plant_sensor_v2.1/: fp-lib-table  plant_sensor_v2.csv  plant_sensor_v2.kicad_dru  plant_sensor_v2.kicad_prl  plant_sensor_v2.kicad_sch  ~plant_sensor_v2.kicad_pcb.lck
V2/Hardware/plant_sensor_v2/Libraries/: ICM20948.kicad_mod
V2/Software/: BLE_p2pServer_test.ioc  lightweight_peripheral.ioc
V2/Software/BLE_Beacon/: .extSettings  .mxproject  BLE_Beacon.ioc
V2/Software/BLE_Beacon/EWARM/: BLE_Beacon.ewp
V2/Software/BLE_Beacon/MDK-ARM/: BLE_Beacon.uvoptx  BLE_Beacon.uvprojx
V2/Software/BLE_Beacon/STM32CubeIDE/: .cproject  .project  BLE_Beacon Debug.launch  BLE_Beacon.launch
V2/Software/BLE_p2pClient_Ext/: .mxproject  BLE_p2pClient_Ext.ioc
V2/Software/BLE_p2pClient_Ext/EWARM/: BLE_p2pClient_Ext.ewp
V2/Software/BLE_p2pClient_Ext/MDK-ARM/: BLE_p2pClient_Ext.uvoptx  BLE_p2pClient_Ext.uvprojx
V2/Software/BLE_p2pClient_Ext/STM32CubeIDE/: .cproject  .project  BLE_p2pClient_Ext.launch
V2/Software/BLE_p2pServer_test/: .cproject  .mxproject  .project  BLE_p2pServer_test.ioc  STM32WBA52CGUX_FLASH.ld  STM32WBA52CGUX_RAM.ld
V2/Software/BLE_p2pServer_test/Debug/: BLE_p2pServer_test.elf  BLE_p2pServer_test.map  makefile  objects.list  sources.mk
V2/Software/BLE_p2pServer_test/Release/: BLE_p2pServer_test.elf  BLE_p2pServer_test.list  BLE_p2pServer_test.map  makefile  sources.mk
V2/Software/STM32WB09_lightweight/: STM32WB09_lightweight.ioc
V2/Software/test/: .cproject  .mxproject  .project  Hands_On_WBA55.ioc  STM32WBA52CGUX_FLASH.ld  STM32WBA52CGUX_RAM.ld  test.ioc  test.launch
V2/Software/test/Debug/: makefile  objects.list  sources.mk
V2/Software/test2/: .mxproject  STM32WBA52xx_FLASH.ld  STM32WBA52xx_RAM.ld  test2.ioc
V2/Software/test2/STM32CubeIDE/: .cproject  .project  STM32WBA52CGUX_FLASH.ld  STM32WBA52CGUX_RAM.ld
V2/Software/test2/cmake/: gcc-arm-none-eabi.cmake
V2/Software/test2/cmake/stm32cubemx/: CMakeLists.txt
V2/Software/test3/: .cproject  .mxproject  .project  STM32WBA52CGUX_FLASH.ld  STM32WBA52CGUX_RAM.ld  test3.ioc  test3.launch
V2/Software/test3/Debug/: makefile  objects.list  sources.mk  test3.elf  test3.map
V2/plant_sensor_v2/: plant_sensor_v2.kicad_pcb  plant_sensor_v2.kicad_sch
(+1284 files in other folders)
